# SAR

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
backend/: CMakeLists.txt  alpaca_ws_demo.cpp  anomaly_detector.cpp  anomaly_detector.h  api.cpp  api.h  data_parser.cpp  data_parser.h  main.cpp  priceAnomaly.cpp  shared_state.h  socket.cpp  socket.h  volumeAnomaly.cpp
backend/anomalies/: CMakeLists.txt  priceAnomaly.cpp  spreadAnomaly.cpp  volumeAnomaly.cpp
backend/util/: stdev.h
frontend/: .env.example  .firebaserc  .gitignore  firebase.json  firestore.rules  package-lock.json  package.json
frontend/functions/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/functions/src/: index.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Dashboard.tsx  DashboardTickerNav.tsx  TickerForm.tsx  TickerList.tsx  apiTest.tsx
frontend/src/data/: topTickers.ts
frontend/src/types/: anomaly.ts
frontend/src/utils/: tickers.ts
proxy/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
proxy/src/: anomalies.ts  app.ts  firebase.ts  server.ts  tickers.ts
proxy/src/config/: index.ts
proxy/src/routes/: anomalies.ts
server/: .env.example  README.md  nodemon.json  package-lock.json  package.json  tsconfig.json
server/src/: app.js  app.ts  server.js  server.ts
server/src/config/: index.js
server/src/middleware/: errorHandler.js  errorHandler.ts  notFound.js  notFound.ts
services/hello-service/: CMakeLists.txt  Dockerfile
services/ws-gateway/: CMakeLists.txt
(+4 files in other folders)
